girepository.h
@@ -123,6 +123,8 @@ gint          g_irepository_get_n_infos   (GIRepository *repository,
 GIBaseInfo *  g_irepository_get_info      (GIRepository *repository,
 					   const gchar  *namespace_,
 					   gint          index);
+GIEnumInfo *  g_irepository_find_by_error_domain (GIRepository *repository,
+						  GQuark        domain);
 const gchar * g_irepository_get_typelib_path   (GIRepository *repository,
 						const gchar  *namespace_);
 const gchar * g_irepository_get_shared_library (GIRepository *repository,
